package edu.dio.phone.musicplayer;

public interface MusicPlayer {
    void tocarMusica(String music);

    void pararMusica();

    void musicList();
}
