package edu.dio.phone.telefone;

public interface Telefone {

    void fazerChamada(String numero);

    void encerrarChamada();

    void historicoChamadas();
}
